components/button/index.css
/*!
Copyright 2023 Adobe. All rights reserved.
This file is licensed to you under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License. You may obtain a copy
of the License at http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under
the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR REPRESENTATIONS
OF ANY KIND, either express or implied. See the License for the specific language
governing permissions and limitations under the License.
*/

@import "@spectrum-css/commons/basebutton.css";

.spectrum-Button {
  --spectrum-button-animation-duration: var(--spectrum-animation-duration-100);
  --spectrum-button-border-radius: var(--spectrum-corner-radius-full);
  --spectrum-button-border-width: var(--spectrum-border-width-200);
  
  --spectrum-button-focus-ring-gap: var(--spectrum-focus-indicator-gap);
  --spectrum-button-focus-ring-thickness: var(--spectrum-focus-indicator-thickness);
  --spectrum-button-focus-indicator-color: var(--spectrum-focus-indicator-color);

  --spectrum-button-min-width: calc(var(--spectrum-component-height-100) * var(--spectrum-button-minimum-width-multiplier));
  --spectrum-button-height: var(--spectrum-component-height-100);

  /* @todo set line-height value per size, using font size specific line-height tokens when they are finalized. */
  --spectrum-button-line-height: 1.2;
  --spectrum-button-font-weight: var(--spectrum-bold-font-weight);
  --spectrum-button-font-size: var(--spectrum-font-size-100);

  --spectrum-button-edge-to-visual: calc(var(--spectrum-component-pill-edge-to-visual-100) - var(--spectrum-button-border-width));
  --spectrum-button-edge-to-visual-only: var(--spectrum-component-pill-edge-to-visual-only-100);
  --spectrum-button-edge-to-text: calc(var(--spectrum-component-pill-edge-to-text-100) - var(--spectrum-button-border-width));
  --spectrum-button-padding-label-to-icon: var(--spectrum-text-to-visual-100);
  --spectrum-button-top-to-text: var(--spectrum-button-top-to-text-medium);
  --spectrum-button-bottom-to-text: var(--spectrum-button-bottom-to-text-medium);
  --spectrum-button-top-to-icon: var(--spectrum-component-top-to-workflow-icon-100);
  --spectrum-button-intended-icon-size: var(--spectrum-workflow-icon-size-100);

  --spectrum-button-border-color-default: transparent;
  --spectrum-button-border-color-hover: transparent;
  --spectrum-button-border-color-down: transparent;
  --spectrum-button-border-color-focus: transparent;

  --spectrum-button-background-color-disabled: var(--spectrum-disabled-background-color);
  --spectrum-button-border-color-disabled: transparent;
  --spectrum-button-content-color-disabled: var(--spectrum-disabled-content-color);

  --mod-progress-circle-position: absolute;
  /* stylelint-disable-next-line spectrum-tools/no-unknown-custom-properties */
  --spectrum-downstate-perspective: max(var(--spectrum-downstate-height), var(--spectrum-downstate-width) * var(--spectrum-component-size-width-ratio-down));
}

.spectrum-Button--sizeS {
  --spectrum-button-min-width: calc(var(--spectrum-component-height-75) * var(--spectrum-button-minimum-width-multiplier));
  --spectrum-button-height: var(--spectrum-component-height-75);

  --spectrum-button-font-size: var(--spectrum-font-size-75);

  --spectrum-button-edge-to-visual: calc(var(--spectrum-component-pill-edge-to-visual-75) - var(--spectrum-button-border-width));
  --spectrum-button-edge-to-visual-only: var(--spectrum-component-pill-edge-to-visual-only-75);
  --spectrum-button-edge-to-text: calc(var(--spectrum-component-pill-edge-to-text-75) - var(--spectrum-button-border-width));
  --spectrum-button-padding-label-to-icon: var(--spectrum-text-to-visual-75);
  --spectrum-button-top-to-text: var(--spectrum-button-top-to-text-small);
  --spectrum-button-bottom-to-text: var(--spectrum-button-bottom-to-text-small);
  --spectrum-button-top-to-icon: var(--spectrum-component-top-to-workflow-icon-75);
  --spectrum-button-intended-icon-size: var(--spectrum-workflow-icon-size-75);

  &.spectrum-Button--iconOnly {
    --spectrum-downstate-perspective: var(--spectrum-component-size-minimum-perspective-down);
  }
}

.spectrum-Button--sizeL {
  --spectrum-button-min-width: calc(var(--spectrum-component-height-200) * var(--spectrum-button-minimum-width-multiplier));
  --spectrum-button-height: var(--spectrum-component-height-200);

  --spectrum-button-font-size: var(--spectrum-font-size-200);

  --spectrum-button-edge-to-visual: calc(var(--spectrum-component-pill-edge-to-visual-200) - var(--spectrum-button-border-width));
  --spectrum-button-edge-to-visual-only: var(--spectrum-component-pill-edge-to-visual-only-200);
  --spectrum-button-edge-to-text: calc(var(--spectrum-component-pill-edge-to-text-200) - var(--spectrum-button-border-width));
  --spectrum-button-padding-label-to-icon: var(--spectrum-text-to-visual-200);
  --spectrum-button-top-to-text: var(--spectrum-button-top-to-text-large);
  --spectrum-button-bottom-to-text: var(--spectrum-button-bottom-to-text-large);
  --spectrum-button-top-to-icon: var(--spectrum-component-top-to-workflow-icon-200);
  --spectrum-button-intended-icon-size: var(--spectrum-workflow-icon-size-200);
}
/* ... */

